[package]
name = "redive"
description = "Trace URL redirections in the terminal."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.0"
indicatif = "0.16"
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1